dsm news!

# 2.2.8
 * Speed up and reduced memory usage in variance calculations, thanks to Filipe Dias for asking about this.

# 2.2.7
 * Plotting check plots using random quantile residuals (rqgam.check) didn't work for Tweedie or tw family models, now fixed. Thanks to Laura Mannocci and Jason Roberts for pointing this out.
 * Plotting CV used matrix() to coerce data into a data.frame -- thus converting all elements to the simplest type. Errors ensued. Thanks to Adrian Schiavini for finding this bug!

# 2.2.6
 * dsm.var.prop and dsm.var.gam now allow you to supply a single number as an offset, then copy it as many times as you need. Thanks to Filipe Dias for suggesting this.

# 2.2.5
 * dsm.var.prop will now throw an error if there is no detection function in the dsm that it's trying to calculate the variance for (thanks to Adrián Schiavini for finding this)
 * variance/CV plotting threw an error when no detection function was supplied but observation=TRUE. Now error is sidestepped (again, thanks to Adrián Schiavini for finding this).

# 2.2.4
 * changed stop() to warning() when data not in the detection function are included in the observation data frame, as they are automatically excluded later, bug found by Eric Rexstad and Anna Cucknell

# 2.2.3
 * moving block boostrap was using observed abundances as the residuals and therefore gave wrong answers (Eric Rexstad found this bug)

# 2.2.2
 * version number reporting now works (Len Thomas found this bug)
 * more documentation
 * by default density and presence models are now weighted by area of each segment

# 2.2.1
 * switch over to new testthat spec
 * added new response variables (Dhat, density.est, count, n), suggestion from Len Thomas

# 2.1.4
 * check that all observed distances are within width will now throw an error

# 2.1.3
  * CRAN-compatibility fixes

# 2.1.2
  * updates to dsm.cor
  * more unified plotting
  * variance estimation tweaks for non-dsm models

# 2.0.6